bug fix: item checkbox clipping

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -356,7 +356,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 1px;
+    flex-shrink: 0;
+    flex-grow: 0;
 }
 
 .item__caption {
